# vfs-Login-bot

./: PROJECT_FINDINGS.md  README.md  howtorun.md  mailtm_otp.py  mailtm_session.json  otp_fetcher.py  pyproject.toml  selector file.html
.github/workflows/: build.yml  codeql.yml  publish-testpypi.yml  publish.yml  scorecard.yml
config/: config.ini  vfs_urls.ini
config/routes/: AE-DK.json  AE-LU.json  IN-LU.json  _default.json
src/: main.py
src/utils/: route_schema.py
src/vfs_bot/: vfs_bot.py  vfs_bot_de.py  vfs_bot_factory.py  vfs_bot_it.py  vfs_bot_lu.py  vfs_bot_mt.py
vfs_appointment_bot/: main.py
vfs_appointment_bot/vfs_bot/: vfs_bot.py  vfs_bot_de.py  vfs_bot_it.py
