# Project metadata
[tool.poetry]
name = "vfs-login-bot"
version = "1.0.0"
description = "VFS Login Bot - Automates login to VFS Global visa appointment portal."
authors = ["Mufaddal <calcutta53.mufaddal@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["vfs", "vfs-bot", "vfs-login-bot", "visa-login-bot"]
packages = [{ include = "src" }]

# URLs
[tool.poetry.urls]
repository = "https://github.com/mufaddal-viit/vfs-Login-bot"
homepage = "https://github.com/mufaddal-viit/vfs-Login-bot"

# Build System
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Dependencies
[tool.poetry.dependencies]
python = "^3.9"
playwright = "^1.43.0"
playwright-stealth = "^1.0.6"

[tool.poetry.dev-dependencies]
flake8 = "^7.0.0"
black = "^25.11.0"

#Entry points
[tool.poetry.scripts]
vfs-login-bot = "src.main:main"
